# RDKS100_Drowning

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindHIKSDK.cmake
configs/: app_config.json  test_configs.json
doc/: RDKS100P 模型部署.md  项目的整体框架.md
src/: CMakeLists.txt  main.cc
src/Inference/: BaseInfer.h  CMakeLists.txt  Patchcore.cpp  Patchcore.h  Yolo11Infer.cpp  Yolo11Infer.h  YoloPose.cpp  YoloPose.h
src/Logic/: CMakeLists.txt  DrowningState.cpp  DrowningState.h  DrowningUnderSurface.cpp  DrowningUnderSurface.h  LogicBase.h
src/Worker/: AIInferenceManager.cpp  AIInferenceManager.h  CMakeLists.txt  DetectionCoordinator.cpp  DetectionCoordinator.h  DetectionWorker.cpp  DetectionWorker.h  RecordingManager.cpp  RecordingManager.h  VideoCaptureManager.cpp  VideoCaptureManager.h
src/algorithm/: CMakeLists.txt
src/algorithm/SAHI/include/: SAHI.h
src/algorithm/SAHI/src/: SAHI.cc
src/algorithm/bytetrack/include/: BYTETracker.hpp  STrack.hpp  kalmanFilter.hpp
src/algorithm/bytetrack/src/: BYTETracker.cc  STrack.cc  kalmanFilter.cc  lapjv.cc  utils.cc
src/algorithm/yolo/include/: ultralytics_yolo11.hpp
src/algorithm/yolo/src/: ultralytics_yolo11.cc
src/algorithm/yolo_pose/include/: ultralytics_yolo11_pose.hpp
src/algorithm/yolo_pose/src/: ultralytics_yolo11_pose.cc
src/algorithm/yolo_seg/include/: ultralytics_yolo11_seg.hpp
src/algorithm/yolo_seg/src/: ultralytics_yolo11_seg.cc
src/base/: CMakeLists.txt  ThreadPool.h  ThreadSafeQueue.h
src/common/: CMakeLists.txt  Config.h  ImageSaver.cpp  ImageSaver.h  MatPool.cpp  MatPool.h  PlogInitializer.h
src/sensor/: CMakeLists.txt  HikCamera.cpp  HikCamera.h  ImageSensor.cpp  ImageSensor.h  RTSPCamera.cpp  RTSPCamera.h
src/ui/: CMakeLists.txt  DetectionWorker.cpp  DetectionWorker.h  LogicBase.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: CMakeLists.txt  test_Bytetrack.cc  test_Cereal_SDK.cc  test_Detection.cc  test_DetectionVideo.cc  test_Drowning.cc  test_H264.cc  test_HIKSDK.cc  test_HikCamera.cc  test_ImageSaver.cc  test_Plog.cc  test_Pose.cc  test_Pose_img.cc  test_SAHI.cc  test_UnderOrSurface.cc  test_deeplabv3+.cc  test_finewaternet.cc  test_mmpose.cc  test_patchcore.cc  test_patchcore_hpp.cc  test_pose_Base.cc  test_roughwaternet.cc  test_rtsp.cc  test_seg.cc  test_swimmer.cc
tools/: 03-test_ImageSaver.sh  10-test_Cereal_SDK.sh  11-test_HikCamera.sh  12-test_Polg.sh  14-test_SAHI.sh  15-test_pose_Base.sh  16-test_roughwaternet.sh  17-test_finewaternet.sh  18-test_deeplabv3+.sh  19-test_mmpose.sh  20-test_patchcore.sh  21-test_patchcore_hpp.sh  22-test_UnderOrSurface.sh  23-test_swimmer.sh  24-test_Drowning.sh  make.sh  remake.sh
